src/objects/Document_Type_Search_Result_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <referenceTo>Document_Type__mdt</referenceTo>
        <relationshipLabel>Document Type Search Result Fields</relationshipLabel>
        <relationshipName>Document_Type_Search_Result_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_By_Field_Name__c</fullName>
        <label>Search By Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Search_By_Field_Name__c</fullName>
        <label>WS_Search By Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Document Type Search Result Fields</label>
    <pluralLabel>Document Type Search Result Fields</pluralLabel>
</CustomObject>